tests/contract_testcases/substrate/variables/global_constants_01.sol
uint constant public x = 102;
// ---- Expect: diagnostics ----
// error: 1:15-21: 'public': global variable cannot have visibility specifier
